<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/swipe"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".ui.MainActivity">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5" />


        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:layout_marginBottom="24dp"
            android:contentDescription="@string/logounpam"
            android:src="@drawable/logo_unpam"
            app:layout_constraintBottom_toTopOf="@+id/textView"
            app:layout_constraintEnd_toEndOf="@+id/textView"
            app:layout_constraintStart_toStartOf="@+id/textView" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:text="@string/menu_utama"
            android:textColor="@color/colorAccent"
            android:textSize="20sp"
            android:textStyle="bold|italic"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
            app:layout_constraintEnd_toEndOf="@+id/linearLayout2"
            app:layout_constraintStart_toStartOf="@+id/linearLayout2" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal"
            android:weightSum="2"
            app:layout_constraintBottom_toTopOf="@+id/guideline">

            <Button
                android:id="@+id/btCek"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:background="@drawable/bg_button"
                android:text="@string/cek_saldo"
                android:textColor="@color/white"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btTf"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:background="@drawable/bg_button"
                android:text="@string/transfer"
                android:textColor="@color/white"
                tools:ignore="ButtonStyle" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="20dp"
            android:orientation="horizontal"
            android:weightSum="2"
            app:layout_constraintTop_toBottomOf="@+id/guideline">

            <Button
                android:id="@+id/btTtunai"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:background="@drawable/bg_button"
                android:text="@string/tarik_tunai"
                android:textColor="@color/white"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btSt"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:background="@drawable/bg_button"
                android:text="@string/setor_tunai"
                android:textColor="@color/white"
                tools:ignore="ButtonStyle" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="100dp"
                android:layout_marginEnd="-50dp"
                android:contentDescription="@string/decorations"
                android:src="@drawable/bg_circle_gradient" />

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginEnd="50dp"
                android:layout_marginBottom="-50dp"
                android:src="@drawable/bg_circle_gradient"
                android:contentDescription="@string/decorations" />

            <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginEnd="-80dp"
                android:layout_marginBottom="-50dp"
                android:contentDescription="@string/decorations"
                android:src="@drawable/bg_circle_gradient" />
        </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>