<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/bg_rounded">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@drawable/bg_radius"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:gravity="center"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_info"
                android:contentDescription="@string/decorations" />

            <TextView
                android:id="@+id/txt_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/info"
                android:textColor="@color/white"
                android:textSize="22sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Username"
                android:textColor="@color/biru"
                android:textSize="16sp"
                tools:ignore="HardcodedText"
                android:layout_marginTop="20dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="30dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Rp "
                    android:textColor="@color/biru"
                    android:textSize="16sp"
                    tools:ignore="HardcodedText" />

                <TextView
                    android:id="@+id/tvSaldo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="50.000"
                    android:textColor="@color/biru"
                    android:textSize="16sp"
                    tools:ignore="HardcodedText" />
            </LinearLayout>

            <Button
                android:id="@+id/bt_close"
                android:layout_width="200dp"
                android:layout_height="35dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/bg_button_accent"
                android:gravity="center"
                android:text="@string/tutup"
                android:textColor="#ffffffff" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>